<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_form_lista" tools:context="todo.javatechig.com.tareas.FormLista">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e1"
        android:hint="@string/labeE1"
        android:textSize="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/e5"
        android:layout_alignEnd="@+id/e5"
        android:layout_alignLeft="@+id/e4"
        android:layout_alignStart="@+id/e4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e2"
        android:layout_below="@+id/e1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/labeE2"
        android:textSize="12dp"
        android:layout_alignRight="@+id/e1"
        android:layout_alignEnd="@+id/e1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e3"
        android:hint="@string/labeE3"
        android:textSize="12dp"
        android:layout_below="@+id/e2"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignRight="@+id/e2"
        android:layout_alignEnd="@+id/e2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e4"
        android:hint="@string/labeE4"
        android:textSize="12dp"
        android:layout_below="@+id/e3"
        android:layout_alignLeft="@+id/e5"
        android:layout_alignStart="@+id/e5"
        android:layout_alignRight="@+id/e5"
        android:layout_alignEnd="@+id/e5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e5"
        android:layout_below="@+id/e4"
        android:layout_marginTop="12dp"
        android:hint="@string/labeE5"
        android:layout_alignRight="@+id/e6"
        android:layout_alignEnd="@+id/e6"
        android:textSize="12dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e6"
        android:layout_below="@+id/e5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:hint="@string/labeE6"
        android:textSize="12dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText"
        android:textSize="12dp"
        android:layout_alignTop="@+id/e2"
        android:layout_alignLeft="@+id/e1"
        android:layout_alignStart="@+id/e1"
        android:layout_alignRight="@+id/e2"
        android:layout_alignEnd="@+id/e2" />
</RelativeLayout>
